# math-grapher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: basic_plot.rs
src/: lib.rs  main.rs
src/algebra/: derivative.rs  fitting.rs  intersection.rs  mod.rs  roots.rs
src/evaluator/: adaptive.rs  cpu_eval.rs  interval.rs  mod.rs
src/parser/: ast.rs  hints.rs  latex.rs  lexer.rs  mod.rs  validator.rs
src/render/: canvas.rs  curve.rs  grid.rs  markers.rs  mod.rs  region.rs
src/ui/: app.rs  expr_panel.rs  graph_view.rs  history.rs  math_display.rs  mod.rs  project.rs  settings.rs  slider.rs  syntax.rs  toolbar.rs
tests/: algebra_tests.rs  evaluator_tests.rs  parser_tests.rs
